@@ -1,5 +1,5 @@
-# Copyright 2010, 2011 Free Software Foundation, Inc.
-
+# Copyright 2011 Free Software Foundation, Inc.
+#
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 3 of the License, or
@@ -19,7 +19,7 @@ if {![dwarf2_support]} {
     return 0  
 }
 
-set testfile "dw2-stack-boundary"
+set testfile "dw2-simple-locdesc"
 set srcfile ${testfile}.S
 set executable ${testfile}.x
 set binfile ${objdir}/${subdir}/${executable}
@@ -28,20 +28,6 @@ if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" object {}] != ""
     return -1
 }
 
-gdb_exit
-gdb_start
-gdb_reinitialize_dir $srcdir/$subdir
+clean_restart $executable
 
-# From gdb_file_cmd:
-if [is_remote host] {
-    set arg [remote_download host $binfile]
-    if { $arg == "" } {
-	perror "download failed"
-	return -1
-    }
-}
-gdb_test_no_output "set complaints 100"
-gdb_test "file $binfile" {Reading symbols from .*\.\.\.Asked for position 0 of stack, stack only has 0 elements on it\..*\.\.\.done\.} "check partial symtab errors"
-
-gdb_test "p underflow" {Asked for position 0 of stack, stack only has 0 elements on it\.}
-gdb_test "p overflow" " = 2"
+gdb_test "p &s.b" { = \(int \*\) 0x1000000}
